# gameover

./: .gitignore  CHANGELOG.md  README.md  gameover.sh  gameover_dev.bat  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup_env.sh
gameover/: __init__.py
gameover/input/: ergodox_tony.py  hotkeys.py  keyboard_styles.tcss  keyboard_ui.py  tony_hotkeys.py  windows_constants.py
gameover/keyboards/: ergodox_tony.py
gameover/scratchpad/: button.tcss  pynput_scratchpad.py  scratch.py  styles.tcss  textual_scratchpad.py  vlc_scratchpad.py  win32_scratchpad.py
keyboards/: ergodox_tony.py
src/: __init__.py  colors.py  config.py  extension.ts  gameover.py  gameover_gui.py  gui.py  keymap_mode.py  keymapper.conf  keymapperctl.py  macros.py  path_utils.py  rating_folders.py  shell_utils.py  window_manager_ricer.py  xnview_rater.py
src/custom_macros/: CS_7350.py
src/test/test-dir/: scratchpad.py
