[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gameover"
version = "0.1.0"
description = "gameover (Gamer Overlay) is a Python project that provides an overlay for desktop environments inspired by game keyboard shortcuts and overlays."
requires-python = ">=3.12"

dependencies = [
  "pyperclip",
  "aiofiles",
  "rich",
  "colored-traceback",
  "textual",
  "textual-dev",
  "pywin32; sys_platform == 'win32'",
  "types-pywin32; sys_platform == 'win32'",
  "psutil",
  "pathspec",
  "pynput",
  "rich",
  "python-vlc",

]

[project.optional-dependencies]
dev = [
]

[tool.hatch.build.targets.wheel]
packages = ["gameover"]
